# qt-programming-2025

./: .gitmodules  CMakeLists.txt  build.bat
assets/: s_vshader.glsl  t_fshader.glsl  t_vshader.glsl
src/: CMakeLists.txt  DocMain.md  Scene.cpp  Scene.h  World.cpp  World.h  main.cpp
src/Compoments/: Drawable.h  Tags.h
src/Components/: Animation.h  Animator.h  Body.h  DocComponents.md  Drawable.h  Input.h  Keymap.h  Output.h  PhysicsDesciption.h  State.h  Tags.h  Transform.h  Types.h
src/Core/: Scene.cpp  Scene.h  World.cpp  World.h
src/Events/: BodyEvents.h  EntityEvents.h  KeyEvents.h  StateEvents.h
src/Managers/: DocManagers.md  EventManager.cpp  EventManager.h  EventManagerREADME.md  ManagersREADME.md  TextureManager.cpp  TextureManager.h  TextureManagerREADME.md
src/Prefab/: Player.cpp  Player.h  Prefab.cpp  Prefab.h  PrefabREADME.md
src/Scripts/: BulletScript.cpp  BulletScript.h  MonsterScript.cpp  MonsterScript.h  PlayerScript.cpp  PlayerScript.h  Script.h
src/Scripts/StateMachine/: StateMachine.h
src/Systems/: AnimationSystem.cpp  AnimationSystem.h  AnimatorREADME.md  AnimatorSystem.cpp  AnimatorSystem.h  Doc_System.md  KeyboardControlSystem.cpp  KeyboardControlSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  ScriptSystem.cpp  ScriptSystem.h  ScriptSystemREADME.md  StateMachineREADME.md  StateMachineSystem.cpp  StateMachineSystem.h  System.cpp  System.h
src/Type/: Errors.h  Matrix.h  Vector.h
src/Utils/: Dumper.h  FileUtils.h  Registerable.h  Singletion.cpp  Singletion.h  Subscriber.h  wrapper.h
utils/: clean_image.py  cut_image.py  devide.py  fix_person_bug.py  fix_zombie.py  gen_empty_wav.py  load_res.py  png_convert.py  rename.py
